Added two tests; both pass